Add data.table to import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(SummarizeCIPE)
 export(SummaryAttrTable)
 export(WritePolyref)
 import(RColorBrewer)
+import(data.table)
 import(plyr)
 import(stringr)
