--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(PlotProbe0)
 export(PlotTerritoryProbe)
 export(SummarizeCIPE)
 export(SummaryAttrTable)
+export(UtmToALMaSS)
 export(WritePolyref)
 import(RColorBrewer)
 import(data.table)
