--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(UtmToALMaSS)
 export(WritePolyref)
 import(RColorBrewer)
 import(data.table)
+import(lubridate)
 import(plyr)
 import(rgdal)
 import(sp)
