Add plotGooseForage function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ClassifyFields)
 export(CleanAttrTable)
 export(ConvertSimDay)
 export(PlotEnergetics)
+export(PlotGooseForage)
 export(PlotProbe0)
 export(PlotTerritoryProbe)
 export(PlotWeather)
@@ -14,6 +15,8 @@ export(UtmToALMaSS)
 export(WritePolyref)
 import(RColorBrewer)
 import(data.table)
+import(gridExtra)
+import(lubridate)
 import(plyr)
 import(rgdal)
 import(sp)
