Add PlotVegDump function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(PlotEnergetics)
 export(PlotGooseForage)
 export(PlotProbe0)
 export(PlotTerritoryProbe)
+export(PlotVegDump)
 export(PlotWeather)
 export(SummarizeCIPE)
 export(SummaryAttrTable)
