--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CleanAttrTable)
 export(ConvertSimDay)
 export(PlotEnergetics)
 export(PlotGooseForage)
+export(PlotGoosePopulation)
 export(PlotProbe0)
 export(PlotTerritoryProbe)
 export(PlotVegDump)
@@ -16,8 +17,10 @@ export(UtmToALMaSS)
 export(WritePolyref)
 import(RColorBrewer)
 import(data.table)
+import(ggplot2)
 import(gridExtra)
 import(plyr)
+import(reshape2)
 import(rgdal)
 import(sp)
 import(stringr)
