Add PlotGooseHabitatUse function
Currently just a wrapper around ggplot histogram (more or less)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CleanAttrTable)
 export(ConvertSimDay)
 export(PlotEnergetics)
 export(PlotGooseForage)
+export(PlotGooseHabitatUse)
 export(PlotGoosePopulation)
 export(PlotProbe0)
 export(PlotTerritoryProbe)
