Add function to generate parameter values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ClassifyPrevCrop)
 export(ClassifyVegType)
 export(CleanAttrTable)
 export(ConvertSimDay)
+export(GenerateParams)
 export(PlotEnergetics)
 export(PlotGooseForage)
 export(PlotGooseHabitatUse)
@@ -28,5 +29,6 @@ import(gridExtra)
 import(plyr)
 import(reshape2)
 import(rgdal)
+import(sfsmisc)
 import(sp)
 import(stringr)
