--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ClassifyVegType)
 export(CleanAttrTable)
 export(ConvertSimDay)
 export(GenerateParams)
+export(PlotAOR)
 export(PlotEnergetics)
 export(PlotGooseForage)
 export(PlotGooseHabitatUse)
