use importFrom to get integrate.xy
sfsmisc throws errors when importing. Try to use importFrom to get only
the function I use.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,6 @@ import(gridExtra)
 import(plyr)
 import(reshape2)
 import(rgdal)
-import(sfsmisc)
 import(sp)
 import(stringr)
+importFrom(sfsmisc,integrate.xy)
