--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ language: r
 warnings_are_errors: true
 sudo: required
 
+before_install:
+  - sudo apt-get install libgdal-dev
+
 env:
  global:
    - CRAN: http://cran.rstudio.com
