--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ warnings_are_errors: true
 sudo: required
 
 before_install:
-  - sudo apt-get install libgdal1-dev
+  - sudo apt-get install libv8-dev
 
+r_binary_packages:
+  - rgdal
 env:
  global:
    - CRAN: http://cran.rstudio.com
