Year and ymd from lubridate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,4 +33,6 @@ import(reshape2)
 import(rgdal)
 import(sp)
 import(stringr)
+importFrom(lubridate,year)
+importFrom(lubridate,ymd)
 importFrom(sfsmisc,integrate.xy)
