Only import melt and use pkg::func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,10 +29,10 @@ import(data.table)
 import(ggplot2)
 import(gridExtra)
 import(plyr)
-import(reshape2)
 import(rgdal)
 import(sp)
 import(stringr)
 importFrom(lubridate,year)
 importFrom(lubridate,ymd)
+importFrom(reshape2,melt)
 importFrom(sfsmisc,integrate.xy)
