--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ClassifyPrevCrop)
 export(ClassifyVegType)
 export(CleanAttrTable)
 export(ConvertSimDay)
+export(FixSeparator)
 export(GenerateParams)
 export(PlotAOR)
 export(PlotEnergetics)
