Add function to clean soil type table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ClassifyHabitatUse)
 export(ClassifyPrevCrop)
 export(ClassifyVegType)
 export(CleanAttrTable)
+export(CleanSoilTable)
 export(ConvertSimDay)
 export(FixSeparator)
 export(GenerateParams)
