Add func to check for illegal densities of hunters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(AppendWorkDir)
 export(CalcDistToRoosts)
 export(CalcOverlab)
 export(CalcPseudoCentroid)
+export(CheckDensity)
 export(ClassifyFields)
 export(ClassifyHabitatUse)
 export(ClassifyPrevCrop)
