Add fn to summarize farm ref freqa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CalcDistToRoosts)
 export(CalcOverlab)
 export(CalcPseudoCentroid)
 export(CheckDensity)
+export(CheckFarmRefFreq)
 export(ClassifyFields)
 export(ClassifyHabitatUse)
 export(ClassifyPrevCrop)
