Add function to print the ruleset description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(PlotProbe0)
 export(PlotTerritoryProbe)
 export(PlotVegDump)
 export(PlotWeather)
+export(RuleSetPrint)
 export(SummarizeCIPE)
 export(SummaryAttrTable)
 export(UtmToALMaSS)
