Add func to edit no. runs in bat file acc to paramlist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ClassifyVegType)
 export(CleanAttrTable)
 export(CleanSoilTable)
 export(ConvertSimDay)
+export(EditBat)
 export(FixSeparator)
 export(GenerateParams)
 export(PlotAOR)
