Add function to edit and write the ini files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(CleanAttrTable)
 export(CleanSoilTable)
 export(ConvertSimDay)
 export(EditBat)
+export(EditIni)
 export(FixSeparator)
 export(GenerateParams)
 export(PlotAOR)
