Add simple function to translate vegphase numbers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(ClassifyVegType)
 export(CleanAttrTable)
 export(CleanSoilTable)
 export(ConvertSimDay)
+export(ConvertVegPhase)
 export(EditBat)
 export(EditIni)
 export(FixSeparator)
