Add func to clean API data + calc lsfit to sim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(CalcDistToRoosts)
 export(CalcNoHunterFit)
 export(CalcOverlab)
 export(CalcPseudoCentroid)
+export(CalcWeightFit)
 export(CheckDensity)
 export(CheckFarmRefFreq)
 export(ClassifyFields)
 export(ClassifyHabitatUse)
 export(ClassifyPrevCrop)
 export(ClassifyVegType)
+export(CleanAPIData)
 export(CleanAttrTable)
 export(CleanSoilTable)
 export(ConvertSimDay)
