Add function to write hunter home location file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(RuleSetPrint)
 export(SummarizeCIPE)
 export(SummaryAttrTable)
 export(UtmToALMaSS)
+export(WriteHunterHomeLocs)
 export(WritePolyref)
 import(RColorBrewer)
 import(data.table)
