Add function to check crop rotations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(CalcPseudoCentroid)
 export(CalcWeightFit)
 export(CheckDensity)
 export(CheckFarmRefFreq)
+export(CheckRotation)
 export(ClassifyFields)
 export(ClassifyHabitatUse)
 export(ClassifyPrevCrop)
