Fix spelling mistakes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(AppendWorkDir)
 export(CalcDistToRoosts)
 export(CalcHabitatUseFit)
 export(CalcNoHunterFit)
-export(CalcOverlab)
+export(CalcOverlap)
 export(CalcPseudoCentroid)
 export(CalcWeightFit)
 export(CheckDensity)
