Add EditConfig, add GetParamType as func
Restructure GenerateParams, so ParamType is its own function that can be
accessed from other funcs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,9 +20,11 @@ export(CleanSoilTable)
 export(ConvertSimDay)
 export(ConvertVegPhase)
 export(EditBat)
+export(EditConfig)
 export(EditIni)
 export(FixSeparator)
 export(GenerateParams)
+export(GetParamType)
 export(PlotAOR)
 export(PlotEnergetics)
 export(PlotGooseForage)
