--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(ClassifyVegType)
 export(CleanAPIData)
 export(CleanAttrTable)
 export(CleanSoilTable)
+export(ConvertParam)
 export(ConvertSimDay)
 export(ConvertVegPhase)
 export(EditBat)
