Add GetLengthOfStay function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(EditConfig)
 export(EditIni)
 export(FixSeparator)
 export(GenerateParams)
+export(GetLengthOfStay)
 export(GetParamType)
 export(PlotAOR)
 export(PlotEnergetics)
