--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(FixSeparator)
 export(GenerateParams)
 export(GetLengthOfStay)
 export(GetParamType)
+export(GetParamValue)
 export(PlotAOR)
 export(PlotEnergetics)
 export(PlotGooseForage)
