Add function to store results in batch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(PlotTerritoryProbe)
 export(PlotVegDump)
 export(PlotWeather)
 export(RuleSetPrint)
+export(StoreResults)
 export(SummarizeCIPE)
 export(SummaryAttrTable)
 export(UtmToALMaSS)
