Add function to write reclass table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(SummaryAttrTable)
 export(UtmToALMaSS)
 export(WriteHunterHomeLocs)
 export(WritePolyref)
+export(WriteReclassTable)
 import(RColorBrewer)
 import(data.table)
 import(ggplot2)
