Add function to extract weather data from EOBS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(ConvertVegPhase)
 export(EditBat)
 export(EditConfig)
 export(EditIni)
+export(ExtractEOBS)
 export(FixSeparator)
 export(GenerateParams)
 export(GetLengthOfStay)
